--- a/Css/style.css
+++ b/Css/style.css
@@ -84,7 +84,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url(IMG/Roti.jpg);
+  background-image: url(./IMG/Roti.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
